# chimpai_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  database.db  database.db1  docker-compose.yml  entrypoint.sh  playground.py  pyproject.toml  requirements.txt  ruff.toml  valkey.conf
.github/workflows/: deploy.yml  docker-image.yml  telegram.yml  tg-send.yml
alembic/: env.py
alembic/versions/: 21c2f746b91b_add_export_format_to_settings.py  334d817bc94b_удалены_лишние_модели.py  42dc81b3e089_initial.py  5e5472ae1acf_change_summary_table.py  65fd1674af3d_remove_tts_stt_dalle_add_summary.py  6e98e3fcd6fa_add_shared_token_field.py  8ca5fd5ba736_add_base_url.py  c925261f9bc1_add_export_format_to_settings.py  f8c51ba1b100_add_base_urls_table.py
database/: README.md  settings.db1  settings.db_
tgbot/: bot_init.py  config.py
tgbot/api/: yandex_summary.py
tgbot/callbacks/: clear_history.py  history.py  personality.py  settings.py  summary.py  tts_settings.py
tgbot/dialogs/: admin_main.py  chat_settings.py  chatgpt.py  create_person.py  dalle.py  main.py  neural.py  openai_settings.py  person_menu.py  personality.py  root_settings.py  settings.py  settings_menu.py  stt.py  tts.py  tts_settings.py
tgbot/filters/: admin_filter.py  is_admin.py
tgbot/getters/: base_data.py  chat.py  settings.py  summary.py  system.py  tts_settings.py
tgbot/handlers/: admin.py  admin_start.py  ai_echo.py  answer_ai.py  api_key.py  base_url.py  engines.py  errors.py  images.py  neural_chat.py  new_personality.py  personality.py  settings.py  summary_chat.py  text_chat.py  transcription.py  tts.py  unknown_errors.py  user.py  user_start.py  voice.py  voice_chatgpt.py  voice_transcribe.py
tgbot/middlewares/: database.py  db_and_repo.py  openai.py  openai_api.py  repo.py  summary_api.py  trottling.py
tgbot/misc/: base_urls.py  (+4 more)
voices/: README.md
(+34 files in other folders)
