[tool.poetry]
name = "chimpai-bot"
version = "0.1.0"
description = "OpenAI telegram bot"
authors = ["Herman Guilliman <glmn.dev@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
aiogram-dialog = "^2.0.0"
aioredis = "^2.0.1"
environs = "^9.5.0"
loguru = "^0.7.2"
openai = "^1.1.1"
sqlalchemy = "^2.0.21"
redis = "^5.0.0"
aiosqlite = "^0.19.0"
alembic = "^1.16.1"
ruff = "^0.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
