[project]
name = "chimpai-bot"
version = "1.0.0"
description = "OpenAI telegram bot"
authors = [{ name = "Herman Guilliman", email = "glmn.dev@protonmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "aiogram>=3.1.1,<4",
    "aiogram-dialog>=2.0.0,<3",
    "aioredis>=2.0.1,<3",
    "environs>=9.5.0,<10",
    "loguru>=0.7.2,<0.8",
    "openai>=1.1.1,<2",
    "sqlalchemy>=2.0.21,<3",
    "redis>=5.0.0,<6",
    "aiosqlite>=0.19.0,<0.20",
    "alembic>=1.16.1,<2",
    "bs4>=0.0.2,<0.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13,<0.12",
    "eralchemy[graphviz]>=1.5.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
